--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+markupsafe (1.1.0-1pexip3) pexip; urgency=medium
+
+  * Version bump
+
+ -- Huw Jones <huw@pexip.com>  Mon, 25 Apr 2022 16:31:25 +0100
+
 markupsafe (1.1.0-1pexip2) pexip; urgency=medium
 
   * Rebuild in buster environment
