--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+markupsafe (1.1.1-1pexip1) pexip; urgency=medium
+
+  * Initial bullseye build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 02 Jun 2022 14:42:35 +0100
+
 markupsafe (1.1.1-1) unstable; urgency=medium
 
   [ Ondřej Nový ]
