--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+markupsafe (1.1.1-1pexip2) pexip-bullseye; urgency=medium
+
+  * Main bullseye build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Fri, 24 Jun 2022 14:03:49 +0100
+
 markupsafe (1.1.1-1pexip1) pexip; urgency=medium
 
   * Initial bullseye build
