--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+markupsafe (1.1.1-1pexip3) pexip-bullseye; urgency=medium
+
+  * Bullseye rebuild for ARM64 inclusion
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Mon, 05 Sep 2022 10:34:37 +0100
+
 markupsafe (1.1.1-1pexip2) pexip-bullseye; urgency=medium
 
   * Main bullseye build
